# Build-a-Analytics-Dashboard-in-Streamlit

./: README.md  app.py  pyproject.toml
core/: settings.py  urls.py
core/api/: urls.py
customers/: choices.py  models.py
customers/api/: serializers.py  urls.py
customers/migrations/: 0001_initial.py  0002_rename_created_at_customer_created.py
