[tool.poetry]
name = "analytics-app"
version = "0.1.0"
description = ""
authors = ["SahilMehdiyev <branchsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-jazzmin = "^3.0.1"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
drf-api-logger = "^1.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
